the_project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: project
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: todo-app-svc
              port:
                number: 7777
        - path: /todos
          pathType: Prefix
          backend:
            service:
              name: todo-backend-service
              port:
                number: 8888
